--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="static/css/style.css">
 </head>
 
+
 <body>
 
   <div class="container">
@@ -46,7 +47,8 @@
       </div>
     </div>
   </div>
-
+ 
+  <script src="https://apis.google.com/js/platform.js?onload=loadAuthClient" async defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="static/js/charts.js"></script>
