--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="static/css/style.css">
+  
+  <script type="text/javascript" src="static/js/charts.js"></script>
+    <!-- [START load_google_apis] -->
+    <script src="https://apis.google.com/js/platform.js?onload=loadAuthClient" async defer></script>
 </head>
 
 
 <body>
 
+  <button id='sign-in-btn' onclick="signIn();" disabled>Sign In</button>
+    <button id='sign-out-btn' onclick="signOut();" hidden>Sign Out</button>
+    <button id='send-request-btn' onclick="sendSampleRequest();" disabled>Send sample request</button>
+  
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
@@ -48,7 +56,6 @@
     </div>
   </div>
  
-  <script src="https://apis.google.com/js/platform.js?onload=loadAuthClient" async defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="static/js/charts.js"></script>
